2010-08-31  Peter Rosin  <peda@lysator.liu.se>

	Dump archiver output to the log when testing @file support.
	* libltdl/m4/libtool.m4 (_LT_PROG_AR): Redirect stdout to config.log
	when testing for @file support.
	Suggested by Ralf Wildenhues.

	Silence archiver output when testing @file support.
	* libltdl/m4/libtool.m4 (_LT_PROG_AR): Redirect stdout and stderr
	to the bit bucket when testing for @file support.

2010-08-31  Gary V. Vaughan  <gary@gnu.org>

	Remove double `Generated from foo.m4sh' lines.
	We now require a modern Autoconf to bootstrap libtool, which
	will add the `Generated by ...' boiler-plate automatically,
	so we can remove the hand-rolled @configure_input@
	substitutions we had been doing:
	* clcommit.m4sh, libtoolize.m4sh, tests/defs.sh,
	libltdl/config/announce-gen.m4sh, libltdl/config/ltmain.m4sh,
	libltdl/config/mailnotify.m4sh: Remove @configure_input@.
	* Makefile.am (edit): Remove configure_input substitution.
	(libtoolize, libltdl/config/ltmain.sh, libltdl/m4/ltversion.m4)
	(tests/defs): Don't set `$input' shell variable.
	* Makefile.maint (announce_gen, libltdl/config/mailnotify)
	(commit): Likewise.

2010-08-31  Peter Rosin  <peda@lysator.liu.se>

	Extract the archive name from the .la file and use $AR (not ar).
	* Makefile.am: Pass AR through to the testsuite.
	* tests/archive-in-archive.at: Bump copyright year. Extract archive
	name from the .la file instead of hardcoding the name, and allow
	different archivers. Also clarify that the tested functionality is
	currently broken.

2010-08-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: skip -Wall -Werror with Tru64 cc in cwrapper test.
	* tests/cwrapper.at (cwrapper for uninstalled executables):
	Use a link test rather than a compile test to flesh out unknown
	compiler flags starting with -W; Tru64/OSF1 cc will happily
	accept `-Wall -Werror' as indication to pass flags on to
	subprocesses.

	tests: avoid getopt-m4sh failures when autom4te is not available.